--- a/index.html
+++ b/index.html
@@ -7,85 +7,102 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50 text-gray-900">
+
   <!-- Hero -->
   <section class="bg-blue-900 text-white py-20 px-6 text-center">
-    <h1 class="text-4xl md:text-5xl font-bold">DMK Eletrotécnica</h1>
-    <p class="mt-4 text-lg">Fiscalização de obras, perícias, inspeções e projetos elétricos</p>
-    <a href="#contato" class="mt-6 inline-block bg-orange-500 text-white px-6 py-3 rounded-lg font-semibold hover:bg-orange-600">
+    <h1 class="text-5xl font-bold mb-4">DMK Eletrotécnica</h1>
+    <p class="text-lg mb-6">Fiscalização de obras, perícias, inspeções, projetos e laudos técnicos</p>
+    <a href="#contato" class="inline-block bg-orange-500 px-8 py-4 rounded-lg font-semibold hover:bg-orange-600 transition">
       Solicite um orçamento
     </a>
   </section>
 
   <!-- Sobre -->
   <section class="py-16 px-6 max-w-5xl mx-auto text-center">
-    <h2 class="text-3xl font-bold mb-4">Sobre nós</h2>
+    <h2 class="text-3xl font-bold mb-4">Sobre a DMK</h2>
     <p class="text-lg text-gray-700">
-      A <strong>DMK Eletrotécnica</strong> é especializada em soluções técnicas em energia elétrica,
-      atuando com fiscalização de obras, perícias judiciais, inspeções, projetos e emissão de laudos.
-      Nosso compromisso é oferecer segurança, qualidade e eficiência em cada serviço.
+      A <strong>DMK Eletrotécnica</strong> oferece soluções completas em energia elétrica, atuando com fiscalização de obras, perícias judiciais e extrajudiciais, inspeções técnicas, projetos e emissão de laudos de SPDA e NR10. Garantimos segurança, qualidade e eficiência em todos os serviços prestados.
     </p>
   </section>
 
   <!-- Serviços -->
   <section class="bg-gray-100 py-16 px-6">
     <div class="max-w-6xl mx-auto text-center">
-      <h2 class="text-3xl font-bold mb-12">📌 Serviços DMK Eletrotécnica</h2>
+      <h2 class="text-3xl font-bold mb-12">📌 Serviços</h2>
       <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-        <div class="bg-white p-6 rounded-xl shadow">
-          <h3 class="text-xl font-semibold mb-2">⚡ Fiscalização de Obras Elétricas</h3>
-          <p class="text-gray-600">
-            Acompanhamento técnico especializado em obras de redes, subestações e instalações elétricas, garantindo conformidade com normas e qualidade na execução.
-          </p>
-        </div>
-        <div class="bg-white p-6 rounded-xl shadow">
-          <h3 class="text-xl font-semibold mb-2">📑 Perícias Judiciais e Extrajudiciais</h3>
-          <p class="text-gray-600">
-            Atuação como perito e assistente técnico em processos envolvendo energia elétrica, com laudos técnicos claros e fundamentados.
-          </p>
-        </div>
-        <div class="bg-white p-6 rounded-xl shadow">
-          <h3 class="text-xl font-semibold mb-2">🔍 Inspeções Técnicas</h3>
-          <p class="text-gray-600">
-            Vistorias detalhadas em instalações elétricas, identificando riscos, anomalias e oportunidades de melhoria, assegurando segurança e eficiência.
-          </p>
-        </div>
-        <div class="bg-white p-6 rounded-xl shadow">
-          <h3 class="text-xl font-semibold mb-2">📐 Projetos Elétricos</h3>
-          <p class="text-gray-600">
-            Elaboração de projetos para baixa e média tensão, adequados às normas vigentes, com foco em segurança, economia e viabilidade técnica.
-          </p>
-        </div>
-        <div class="bg-white p-6 rounded-xl shadow">
-          <h3 class="text-xl font-semibold mb-2">🌩️ Laudos de SPDA</h3>
-          <p class="text-gray-600">
-            Análise e emissão de laudos técnicos do Sistema de Proteção contra Descargas Atmosféricas, conforme normas da ABNT, garantindo a proteção do patrimônio e das pessoas.
-          </p>
-        </div>
-        <div class="bg-white p-6 rounded-xl shadow">
-          <h3 class="text-xl font-semibold mb-2">🛡️ Laudos NR10</h3>
-          <p class="text-gray-600">
-            Relatórios de conformidade das instalações elétricas com a NR10, assegurando atendimento às exigências legais de segurança do trabalho.
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
 
-  <!-- Diferenciais -->
-  <section class="py-16 px-6 max-w-6xl mx-auto text-center">
-    <h2 class="text-3xl font-bold mb-8">Por que escolher a DMK?</h2>
-    <div class="grid md:grid-cols-3 gap-8">
-      <div class="p-6 bg-white rounded-xl shadow">
-        <h3 class="text-xl font-semibold mb-2">Experiência</h3>
-        <p class="text-gray-600">Anos de atuação em obras, perícias e inspeções no setor elétrico.</p>
-      </div>
-      <div class="p-6 bg-white rounded-xl shadow">
-        <h3 class="text-xl font-semibold mb-2">Confiabilidade</h3>
-        <p class="text-gray-600">Trabalho pautado em normas técnicas e transparência com clientes.</p>
-      </div>
-      <div class="p-6 bg-white rounded-xl shadow">
-        <h3 class="text-xl font-semibold mb-2">Atendimento</h3>
-        <p class="text-gray-600">Suporte ágil e personalizado para cada necessidade.</p>
+        <!-- Fiscalização de Obras -->
+        <div class="bg-white rounded-xl shadow overflow-hidden">
+          <img src="https://images.unsplash.com/photo-1612460918657-234b8e0b01fa?auto=format&fit=crop&w=800&q=80" 
+               alt="Fiscalização de Obras" class="w-full h-48 object-cover">
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2">⚡ Fiscalização de Obras Elétricas</h3>
+            <p class="text-gray-600">
+              Acompanhamento técnico em redes, subestações e instalações elétricas, garantindo conformidade com normas e qualidade na execução.
+            </p>
+          </div>
+        </div>
+
+        <!-- Perícias Judiciais -->
+        <div class="bg-white rounded-xl shadow overflow-hidden">
+          <img src="https://images.unsplash.com/photo-1591773580970-264b9c1e5f61?auto=format&fit=crop&w=800&q=80" 
+               alt="Perícias Judiciais" class="w-full h-48 object-cover">
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2">📑 Perícias Judiciais e Extrajudiciais</h3>
+            <p class="text-gray-600">
+              Atuação como perito e assistente técnico em processos envolvendo energia elétrica, com laudos claros e fundamentados.
+            </p>
+          </div>
+        </div>
+
+        <!-- Inspeções Técnicas -->
+        <div class="bg-white rounded-xl shadow overflow-hidden">
+          <img src="https://images.unsplash.com/photo-1581092795366-cf391af84d28?auto=format&fit=crop&w=800&q=80" 
+               alt="Inspeções Técnicas" class="w-full h-48 object-cover">
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2">🔍 Inspeções Técnicas</h3>
+            <p class="text-gray-600">
+              Vistorias detalhadas em instalações elétricas, identificando riscos e oportunidades de melhoria, garantindo segurança e eficiência.
+            </p>
+          </div>
+        </div>
+
+        <!-- Projetos Elétricos -->
+        <div class="bg-white rounded-xl shadow overflow-hidden">
+          <img src="https://images.unsplash.com/photo-1564779473591-0c34a0cba107?auto=format&fit=crop&w=800&q=80" 
+               alt="Projetos Elétricos" class="w-full h-48 object-cover">
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2">📐 Projetos Elétricos</h3>
+            <p class="text-gray-600">
+              Elaboração de projetos de baixa e média tensão, seguindo normas técnicas e garantindo segurança e viabilidade.
+            </p>
+          </div>
+        </div>
+
+        <!-- Laudos de SPDA -->
+        <div class="bg-white rounded-xl shadow overflow-hidden">
+          <img src="https://images.unsplash.com/photo-1618005198919-c65d3f8bbbd4?auto=format&fit=crop&w=800&q=80" 
+               alt="Laudos de SPDA" class="w-full h-48 object-cover">
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2">🌩️ Laudos de SPDA</h3>
+            <p class="text-gray-600">
+              Emissão de laudos do Sistema de Proteção contra Descargas Atmosféricas, garantindo a proteção de pessoas e patrimônio.
+            </p>
+          </div>
+        </div>
+
+        <!-- Laudos NR10 -->
+        <div class="bg-white rounded-xl shadow overflow-hidden">
+          <img src="https://images.unsplash.com/photo-1611820141736-f5f0b3647e1a?auto=format&fit=crop&w=800&q=80" 
+               alt="Laudos NR10" class="w-full h-48 object-cover">
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2">🛡️ Laudos NR10</h3>
+            <p class="text-gray-600">
+              Relatórios de conformidade das instalações elétricas com a NR10, assegurando atendimento às normas de segurança do trabalho.
+            </p>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
@@ -94,7 +111,7 @@
   <section id="contato" class="bg-blue-900 text-white py-16 px-6 text-center">
     <h2 class="text-3xl font-bold mb-4">Entre em contato</h2>
     <p class="mb-6">Solicite um orçamento agora mesmo</p>
-    <a href="https://wa.me/5568999151783" target="_blank" class="bg-orange-500 px-6 py-3 rounded-lg font-semibold hover:bg-orange-600">
+    <a href="https://wa.me/5568999151783" target="_blank" class="bg-orange-500 px-8 py-4 rounded-lg font-semibold hover:bg-orange-600 transition">
       Falar no WhatsApp
     </a>
     <p class="mt-4">ou envie um e-mail para: <a href="mailto:dhuanylima@gmail.com" class="underline">dhuanylima@gmail.com</a></p>
@@ -103,5 +120,6 @@
   <footer class="bg-gray-900 text-white text-center py-4">
     <p>&copy; 2025 DMK Eletrotécnica. Todos os direitos reservados.</p>
   </footer>
+
 </body>
 </html>
