--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <!-- Fiscalização de Obras -->
         <div class="bg-white rounded-xl shadow overflow-hidden">
-          <img src="https://images.unsplash.com/photo-1612460918657-234b8e0b01fa?auto=format&fit=crop&w=800&q=80" 
+          <img src="fiscalizacao.jpg" 
                alt="Fiscalização de Obras" class="w-full h-48 object-cover">
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2">⚡ Fiscalização de Obras Elétricas</h3>
@@ -45,7 +45,7 @@
 
         <!-- Perícias Judiciais -->
         <div class="bg-white rounded-xl shadow overflow-hidden">
-          <img src="https://images.unsplash.com/photo-1591773580970-264b9c1e5f61?auto=format&fit=crop&w=800&q=80" 
+          <img src="pericia.jpg" 
                alt="Perícias Judiciais" class="w-full h-48 object-cover">
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2">📑 Perícias Judiciais e Extrajudiciais</h3>
@@ -123,4 +123,5 @@
 
 </body>
 </html>
+
 
