--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <!-- Inspeções Técnicas -->
         <div class="bg-white rounded-xl shadow overflow-hidden">
-          <img src="https://images.unsplash.com/photo-1581092795366-cf391af84d28?auto=format&fit=crop&w=800&q=80" 
+          <img src="inspecao.jpg" 
                alt="Inspeções Técnicas" class="w-full h-48 object-cover">
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2">🔍 Inspeções Técnicas</h3>
@@ -69,7 +69,7 @@
 
         <!-- Projetos Elétricos -->
         <div class="bg-white rounded-xl shadow overflow-hidden">
-          <img src="https://images.unsplash.com/photo-1564779473591-0c34a0cba107?auto=format&fit=crop&w=800&q=80" 
+          <img src="projeto.jpg" 
                alt="Projetos Elétricos" class="w-full h-48 object-cover">
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2">📐 Projetos Elétricos</h3>
@@ -81,7 +81,7 @@
 
         <!-- Laudos de SPDA -->
         <div class="bg-white rounded-xl shadow overflow-hidden">
-          <img src="https://images.unsplash.com/photo-1618005198919-c65d3f8bbbd4?auto=format&fit=crop&w=800&q=80" 
+          <img src="laudo.jpg" 
                alt="Laudos de SPDA" class="w-full h-48 object-cover">
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2">🌩️ Laudos de SPDA</h3>
@@ -93,7 +93,7 @@
 
         <!-- Laudos NR10 -->
         <div class="bg-white rounded-xl shadow overflow-hidden">
-          <img src="https://images.unsplash.com/photo-1611820141736-f5f0b3647e1a?auto=format&fit=crop&w=800&q=80" 
+          <img src="nr.jpg" 
                alt="Laudos NR10" class="w-full h-48 object-cover">
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2">🛡️ Laudos NR10</h3>
@@ -123,5 +123,6 @@
 
 </body>
 </html>
+
 
 
