--- a/index.html
+++ b/index.html
@@ -9,13 +9,24 @@
 <body class="bg-gray-50 text-gray-900">
 
   <!-- Hero -->
-  <section class="bg-blue-900 text-white py-20 px-6 text-center">
+  <!-- Hero com banner -->
+<section class="relative text-white flex flex-col justify-center items-center h-96">
+  <!-- Banner como background -->
+  <div class="absolute inset-0">
+    <img src="banner.jpg" alt="Banner DMK" class="w-full h-full object-cover">
+    <div class="absolute inset-0 bg-black bg-opacity-40"></div> <!-- sombra escura para destacar o texto -->
+  </div>
+
+  <!-- Texto por cima do banner -->
+  <div class="relative z-10 text-center px-6">
     <h1 class="text-5xl font-bold mb-4">DMK Eletrotécnica</h1>
     <p class="text-lg mb-6">Fiscalização de obras, perícias, inspeções, projetos e laudos técnicos</p>
     <a href="#contato" class="inline-block bg-orange-500 px-8 py-4 rounded-lg font-semibold hover:bg-orange-600 transition">
       Solicite um orçamento
     </a>
-  </section>
+  </div>
+</section>
+
 
   <!-- Sobre -->
   <section class="py-16 px-6 max-w-5xl mx-auto text-center">
@@ -123,6 +134,7 @@
 
 </body>
 </html>
+
 
 
 
