--- a/index.html
+++ b/index.html
@@ -119,14 +119,23 @@
   </section>
 
   <!-- Contato -->
-  <section id="contato" class="bg-blue-900 text-white py-16 px-6 text-center">
-    <h2 class="text-3xl font-bold mb-4">Entre em contato</h2>
-    <p class="mb-6">Solicite um orçamento agora mesmo</p>
-    <a href="https://wa.me/5551992429703" target="_blank" class="bg-orange-500 px-8 py-4 rounded-lg font-semibold hover:bg-orange-600 transition">
-      Falar no WhatsApp
+ <section id="contato" class="bg-blue-900 text-white py-16 px-6 text-center">
+  <h2 class="text-3xl font-bold mb-4">Entre em contato</h2>
+  <p class="mb-6">Solicite um orçamento agora mesmo</p>
+  <a href="https://wa.me/5551992429703" target="_blank" class="bg-orange-500 px-8 py-4 rounded-lg font-semibold hover:bg-orange-600 transition">
+    Falar no WhatsApp
+  </a>
+  <p class="mt-4">ou envie um e-mail para: 
+    <a href="mailto:dhuanylima@gmail.com" class="underline">dhuanylima@gmail.com</a>
+  </p>
+  <p class="mt-4">
+    Endereço: 
+    <a href="https://www.google.com/maps/search/?api=1&query=Avenida+Bernadino+Silveira+Amorim+3695+Porto+Alegre+RS" target="_blank" class="underline">
+      Avenida Bernadino Silveira Amorim, 3695 – Porto Alegre, RS
     </a>
-    <p class="mt-4">ou envie um e-mail para: <a href="mailto:dhuanylima@gmail.com" class="underline">dhuanylima@gmail.com</a></p>
-  </section>
+  </p>
+</section>
+
 
   <footer class="bg-gray-900 text-white text-center py-4">
     <p>&copy; 2025 DMK Eletrotécnica. Todos os direitos reservados.</p>
@@ -134,6 +143,7 @@
 
 </body>
 </html>
+
 
 
 
