--- a/index.html
+++ b/index.html
@@ -128,12 +128,13 @@
   <p class="mt-4">ou envie um e-mail para: 
     <a href="mailto:dhuanylima@gmail.com" class="underline">dhuanylima@gmail.com</a>
   </p>
-  <p class="mt-4">
-    Endereço: 
-    <a href="https://www.google.com/maps/search/?api=1&query=Avenida+Bernadino+Silveira+Amorim+3695+Porto+Alegre+RS" target="_blank" class="underline">
-      Avenida Bernadino Silveira Amorim, 3695 – Porto Alegre, RS
-    </a>
-  </p>
+  <p class="mt-4 flex items-center justify-center gap-2">
+  📍
+  <a href="https://maps.app.goo.gl/vJbfCCMrQzay9Bpa7" target="_blank" class="underline font-semibold">
+    Localização
+  </a>
+</p>
+
 </section>
 
 
@@ -143,6 +144,7 @@
 
 </body>
 </html>
+
 
 
 
