--- a/index.html
+++ b/index.html
@@ -18,14 +18,18 @@
   </div>
 
   <!-- Texto por cima do banner -->
-  <div class="relative z-10 text-center px-6">
-    <h1 class="text-5xl font-bold mb-4">DMK Eletrotécnica</h1>
-    <p class="text-lg mb-6">Fiscalização de obras, perícias, inspeções, projetos e laudos técnicos</p>
-    <a href="#contato" class="inline-block bg-orange-500 px-8 py-4 rounded-lg font-semibold hover:bg-orange-600 transition">
-      Solicite um orçamento
-    </a>
-  </div>
+<div class="relative z-10 text-center px-6">
+  <h1 class="text-5xl font-bold mb-4">DMK Eletrotécnica</h1>
+  <p class="text-lg mb-6">Laudo para SPDA, Auxilio em perícias, inspeções NR10, projetos e laudos técnicos</p>
+  
+  <p class="text-xl font-semibold">Solicitar Orçamento</p>
+  <a href="https://wa.me/5551992429703" target="_blank" 
+     class="flex items-center justify-center gap-2 mt-2 text-green-600 font-bold text-lg hover:underline">
+    <span>📱</span> <span>(51) 99242-9703</span>
+  </a>
+</div>
 </section>
+
 
 
   <!-- Sobre -->
@@ -138,12 +142,20 @@
 </section>
 
 
-  <footer class="bg-gray-900 text-white text-center py-4">
-    <p>&copy; 2025 DMK Eletrotécnica. Todos os direitos reservados.</p>
-  </footer>
+  <footer class="bg-gray-900 text-white py-8 text-center">
+  <p class="text-xl font-semibold">Solicitar Orçamento</p>
+  <a href="https://wa.me/5551992429703" target="_blank" 
+     class="flex items-center justify-center gap-2 mt-2 text-green-400 font-bold text-lg hover:underline">
+    <span>📱</span> <span>(51) 99242-9703</span>
+  </a>
+  
+  <p class="mt-6">© 2025 DMK Eletrotécnica. Todos os direitos reservados.</p>
+</footer>
+
 
 </body>
 </html>
+
 
 
 
