--- a/index.html
+++ b/index.html
@@ -18,17 +18,30 @@
   </div>
 
   <!-- Texto por cima do banner -->
-<div class="relative z-10 text-center px-6">
+<div class="relative z-10 text-center px-6 text-white">
   <h1 class="text-5xl font-bold mb-4">DMK Eletrotécnica</h1>
-  <p class="text-lg mb-6">Laudo para SPDA, Auxilio em perícias, inspeções NR10, projetos e laudos técnicos</p>
-  
-  <p class="text-xl font-semibold">Solicitar Orçamento</p>
+  <p class="text-lg mb-6">Fiscalização de obras, perícias, inspeções, projetos e laudos técnicos</p>
+
+  <!-- Botão Solicitar Orçamento -->
   <a href="https://wa.me/5551992429703" target="_blank" 
-     class="flex items-center justify-center gap-2 mt-2 text-green-600 font-bold text-lg hover:underline">
-    <span>📱</span> <span>(51) 99242-9703</span>
+     class="inline-flex items-center gap-2 bg-green-500 px-8 py-4 rounded-lg font-semibold hover:bg-green-600 transition">
+    <!-- Ícone WhatsApp (SVG) -->
+    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" 
+         class="w-6 h-6" viewBox="0 0 24 24">
+      <path d="M20.52 3.48A11.85 11.85 0 0 0 12 0C5.37 0 0 5.37 0 12c0 2.11.55 4.17 1.59 5.98L0 24l6.2-1.63A11.96 11.96 0 0 0 12 24c6.63 0 12-5.37 12-12 0-3.19-1.24-6.18-3.48-8.52zM12 22a9.93 9.93 0 0 1-5.06-1.37l-.36-.21-3.68.97.98-3.59-.23-.37A9.94 9.94 0 0 1 2 12C2 6.48 6.48 2 12 2c2.67 0 5.18 1.04 7.07 2.93S22 9.33 22 12c0 5.52-4.48 10-10 10zm5.04-7.19c-.27-.14-1.59-.79-1.83-.88-.25-.09-.43-.14-.62.14s-.71.88-.87 1.06c-.16.18-.32.2-.59.07-.27-.14-1.13-.42-2.15-1.34-.79-.7-1.33-1.57-1.49-1.83-.16-.27-.02-.41.12-.55.12-.12.27-.32.41-.48.14-.16.18-.27.27-.45.09-.18.05-.34-.02-.48-.07-.14-.62-1.49-.85-2.04-.22-.52-.45-.45-.62-.46h-.53c-.18 0-.48.07-.73.34s-.96.93-.96 2.27.99 2.63 1.13 2.81c.14.18 1.96 3 4.75 4.2.66.28 1.17.45 1.57.58.66.21 1.26.18 1.74.11.53-.08 1.59-.65 1.81-1.27.23-.62.23-1.15.16-1.27-.07-.11-.25-.18-.52-.32z"/>
+    </svg>
+    Solicitar Orçamento
   </a>
+
+  <!-- Número abaixo -->
+  <p class="mt-4 text-lg font-bold flex items-center justify-center gap-2">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-6 h-6 text-green-500" viewBox="0 0 24 24">
+      <path d="M20.52 3.48A11.85 11.85 0 0 0 12 0C5.37 0 0 5.37 0 12c0 2.11.55 4.17 1.59 5.98L0 24l6.2-1.63A11.96 11.96 0 0 0 12 24c6.63 0 12-5.37 12-12 0-3.19-1.24-6.18-3.48-8.52z"/>
+    </svg>
+    (51) 99242-9703
+  </p>
 </div>
-</section>
+
 
 
 
@@ -146,7 +159,11 @@
   <p class="text-xl font-semibold">Solicitar Orçamento</p>
   <a href="https://wa.me/5551992429703" target="_blank" 
      class="flex items-center justify-center gap-2 mt-2 text-green-400 font-bold text-lg hover:underline">
-    <span>📱</span> <span>(51) 99242-9703</span>
+    <!-- Ícone WhatsApp -->
+    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-6 h-6" viewBox="0 0 24 24">
+      <path d="M20.52 3.48A11.85 11.85 0 0 0 12 0C5.37 0 0 5.37 0 12c0 2.11.55 4.17 1.59 5.98L0 24l6.2-1.63A11.96 11.96 0 0 0 12 24c6.63 0 12-5.37 12-12 0-3.19-1.24-6.18-3.48-8.52z"/>
+    </svg>
+    (51) 99242-9703
   </a>
   
   <p class="mt-6">© 2025 DMK Eletrotécnica. Todos os direitos reservados.</p>
@@ -155,6 +172,7 @@
 
 </body>
 </html>
+
 
 
 
