--- a/index.html
+++ b/index.html
@@ -1,75 +1,169 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>DMK Eletrotécnica</title>
+  <meta name="description" content="DMK Eletrotécnica — Fiscalização de obras, perícias, inspeções, projetos e laudos técnicos (SPDA e NR10)."/>
+  <link rel="preconnect" href="https://cdn.tailwindcss.com">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="font-sans bg-gray-100 text-gray-900">
 
-  <!-- Banner -->
-  <section class="relative h-screen flex items-center justify-center bg-cover bg-center" style="background-image: url('banner.jpg');">
-    <div class="absolute inset-0 bg-black opacity-40"></div>
+<body class="bg-gray-50 text-gray-900 antialiased">
+
+  <!-- HERO / BANNER -->
+  <section class="relative h-[70vh] min-h-[480px] flex items-center justify-center overflow-hidden">
+    <!-- Imagem do banner na RAIZ (ex.: banner.jpg) -->
+    <img src="banner.jpg" alt="Banner DMK Eletrotécnica" class="absolute inset-0 h-full w-full object-cover">
+    <!-- Camada para contraste do texto -->
+    <div class="absolute inset-0 bg-black/50"></div>
 
     <!-- Texto por cima do banner -->
-    <div class="relative z-10 text-center px-6 bg-black bg-opacity-50 rounded-lg inline-block p-6">
-      <h1 class="text-5xl font-bold mb-4 text-white">DMK Eletrotécnica</h1>
-      <p class="text-lg mb-6 text-gray-200">Fiscalização de obras, perícias, inspeções, projetos e laudos técnicos</p>
-      
-      <!-- Botão Solicite orçamento -->
-      <a href="#contato" class="inline-block bg-orange-500 px-8 py-4 rounded-lg font-semibold hover:bg-orange-600 transition text-white">
-        Solicite um orçamento
+    <div class="relative z-10 text-center px-6">
+      <h1 class="text-4xl sm:text-5xl font-extrabold text-white drop-shadow mb-3">
+        DMK Eletrotécnica
+      </h1>
+      <p class="text-base sm:text-lg text-gray-100 mb-6 max-w-3xl mx-auto">
+        Fiscalização de obras, perícias, inspeções, projetos e laudos técnicos
+      </p>
+
+      <!-- “Solicitar Orçamento” + WhatsApp -->
+      <p class="text-xl font-semibold text-white">Solicitar Orçamento</p>
+      <a href="https://wa.me/5551992429703" target="_blank"
+         class="mt-2 inline-flex items-center gap-2 bg-green-500 hover:bg-green-600 text-white font-bold px-5 py-3 rounded-lg transition">
+        <!-- Ícone WhatsApp (SVG) -->
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" aria-hidden="true" class="w-5 h-5 fill-current">
+          <path d="M380.9 97.1C339 55.1 283.2 32 224.8 32 117.8 32 32 117.7 32 224.6c0 40.7 10.7 80.4 31 115.3L32 480l143.8-30.2c33.7 18.5 71.8 28.3 110.9 28.3h.1c106.9 0 192.7-85.7 192.7-192.6 0-58.4-23.2-113.9-64.1-155.9zM224.8 438.7c-34.3 0-67.9-9.2-97.2-26.6l-6.9-4.1-85.3 17.9 17.9-83.3-4.4-7.2c-19.7-32.1-30.1-69-30.1-107.8 0-112.3 91.4-203.6 203.9-203.6 54.4 0 105.6 21.2 144.1 59.7 38.5 38.5 59.7 89.7 59.7 144.1-.1 112.4-91.5 203.9-203.7 203.9zm118.4-150.6c-6.5-3.2-38.4-18.9-44.4-21.1-5.9-2.2-10.2-3.2-14.5 3.2s-16.7 21.1-20.5 25.4c-3.8 4.3-7.5 4.8-13.9 1.6-6.5-3.2-27.3-10.1-52-32.3-19.2-17.1-32.2-38.3-36-44.8-3.8-6.5-.4-10 2.9-13.2 3-3 6.5-7.8 9.7-11.7 3.2-3.8 4.3-6.5 6.5-10.8 2.2-4.3 1.1-8.1-.5-11.3-1.6-3.2-14.5-34.9-19.9-47.7-5.2-12.5-10.5-10.8-14.5-11h-12.3c-4.3 0-11.3 1.6-17.2 8.1-5.9 6.5-22.6 22.1-22.6 53.9s23.2 62.5 26.4 66.8c3.2 4.3 45.9 70.1 111.3 98.4 15.6 6.7 27.7 10.7 37.2 13.7 15.6 4.9 29.8 4.2 41 2.6 12.5-1.9 38.4-15.7 43.8-30.8 5.4-15 5.4-27.8 3.8-30.8-1.6-3.1-5.9-4.9-12.3-8.1z"/>
+        </svg>
+        <span>(51) 99242-9703</span>
+      </a>
+    </div>
+  </section>
+
+  <!-- SOBRE (curto) -->
+  <section class="py-12 px-6 max-w-5xl mx-auto text-center">
+    <h2 class="text-3xl font-bold mb-4">Sobre a DMK</h2>
+    <p class="text-lg text-gray-700">
+      A <strong>DMK Eletrotécnica</strong> oferece soluções completas em energia elétrica: fiscalização de obras, perícias judiciais e extrajudiciais,
+      inspeções técnicas, projetos e emissão de laudos de SPDA e NR10. Segurança, qualidade e eficiência em cada entrega.
+    </p>
+  </section>
+
+  <!-- SERVIÇOS -->
+  <section class="bg-gray-100 py-14 px-6">
+    <div class="max-w-6xl mx-auto">
+      <h2 class="text-3xl font-bold text-center mb-10">📌 Serviços DMK Eletrotécnica</h2>
+
+      <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+
+        <!-- Fiscalização de Obras -->
+        <article class="bg-white rounded-xl shadow overflow-hidden">
+          <img src="fiscalizacao.jpg" alt="Fiscalização de obras elétricas" class="w-full h-48 object-cover"/>
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2">⚡ Fiscalização de Obras Elétricas</h3>
+            <p class="text-gray-600">
+              Acompanhamento técnico especializado em obras de redes, subestações e instalações elétricas,
+              garantindo conformidade com normas e qualidade na execução.
+            </p>
+          </div>
+        </article>
+
+        <!-- Perícias -->
+        <article class="bg-white rounded-xl shadow overflow-hidden">
+          <img src="pericias.jpg" alt="Perícias judiciais e extrajudiciais" class="w-full h-48 object-cover"/>
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2">📑 Perícias Judiciais e Extrajudiciais</h3>
+            <p class="text-gray-600">
+              Atuação como perito e assistente técnico em processos envolvendo energia elétrica, com laudos técnicos claros e fundamentados.
+            </p>
+          </div>
+        </article>
+
+        <!-- Inspeções -->
+        <article class="bg-white rounded-xl shadow overflow-hidden">
+          <img src="inspecao.jpg" alt="Inspeções técnicas em instalações elétricas" class="w-full h-48 object-cover"/>
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2">🔍 Inspeções Técnicas</h3>
+            <p class="text-gray-600">
+              Vistorias detalhadas em instalações elétricas, identificando riscos, anomalias e oportunidades de melhoria, assegurando segurança e eficiência.
+            </p>
+          </div>
+        </article>
+
+        <!-- Projetos -->
+        <article class="bg-white rounded-xl shadow overflow-hidden">
+          <img src="projetos.jpg" alt="Projetos elétricos" class="w-full h-48 object-cover"/>
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2">📐 Projetos Elétricos</h3>
+            <p class="text-gray-600">
+              Elaboração de projetos para baixa e média tensão, adequados às normas vigentes, com foco em segurança, economia e viabilidade técnica.
+            </p>
+          </div>
+        </article>
+
+        <!-- Laudos SPDA -->
+        <article class="bg-white rounded-xl shadow overflow-hidden">
+          <img src="spda.jpg" alt="Laudos de SPDA" class="w-full h-48 object-cover"/>
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2">🌩️ Laudos de SPDA</h3>
+            <p class="text-gray-600">
+              Análise e emissão de laudos técnicos do Sistema de Proteção contra Descargas Atmosféricas, conforme normas da ABNT,
+              garantindo a proteção do patrimônio e das pessoas.
+            </p>
+          </div>
+        </article>
+
+        <!-- Laudos NR10 -->
+        <article class="bg-white rounded-xl shadow overflow-hidden">
+          <img src="nr10.jpg" alt="Laudos NR10" class="w-full h-48 object-cover"/>
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2">🛡️ Laudos NR10</h3>
+            <p class="text-gray-600">
+              Relatórios de conformidade das instalações elétricas com a NR10, assegurando atendimento às exigências legais de segurança do trabalho.
+            </p>
+          </div>
+        </article>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- CONTATO -->
+  <section id="contato" class="py-16 px-6">
+    <div class="max-w-4xl mx-auto text-center">
+      <h2 class="text-3xl font-bold mb-6">Entre em contato</h2>
+      <p class="text-gray-700 mb-6">Fale com a DMK e solicite seu orçamento agora mesmo.</p>
+
+      <!-- WhatsApp (repetido embaixo) -->
+      <a href="https://wa.me/5551992429703" target="_blank"
+         class="inline-flex items-center gap-2 bg-green-500 hover:bg-green-600 text-white font-bold px-6 py-3 rounded-lg transition">
+        <!-- Ícone WhatsApp (SVG) -->
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" aria-hidden="true" class="w-5 h-5 fill-current">
+          <path d="M380.9 97.1C339 55.1 283.2 32 224.8 32 117.8 32 32 117.7 32 224.6c0 40.7 10.7 80.4 31 115.3L32 480l143.8-30.2c33.7 18.5 71.8 28.3 110.9 28.3h.1c106.9 0 192.7-85.7 192.7-192.6 0-58.4-23.2-113.9-64.1-155.9zM224.8 438.7c-34.3 0-67.9-9.2-97.2-26.6l-6.9-4.1-85.3 17.9 17.9-83.3-4.4-7.2c-19.7-32.1-30.1-69-30.1-107.8 0-112.3 91.4-203.6 203.9-203.6 54.4 0 105.6 21.2 144.1 59.7 38.5 38.5 59.7 89.7 59.7 144.1-.1 112.4-91.5 203.9-203.7 203.9zm118.4-150.6c-6.5-3.2-38.4-18.9-44.4-21.1-5.9-2.2-10.2-3.2-14.5 3.2s-16.7 21.1-20.5 25.4c-3.8 4.3-7.5 4.8-13.9 1.6-6.5-3.2-27.3-10.1-52-32.3-19.2-17.1-32.2-38.3-36-44.8-3.8-6.5-.4-10 2.9-13.2 3-3 6.5-7.8 9.7-11.7 3.2-3.8 4.3-6.5 6.5-10.8 2.2-4.3 1.1-8.1-.5-11.3-1.6-3.2-14.5-34.9-19.9-47.7-5.2-12.5-10.5-10.8-14.5-11h-12.3c-4.3 0-11.3 1.6-17.2 8.1-5.9 6.5-22.6 22.1-22.6 53.9s23.2 62.5 26.4 66.8c3.2 4.3 45.9 70.1 111.3 98.4 15.6 6.7 27.7 10.7 37.2 13.7 15.6 4.9 29.8 4.2 41 2.6 12.5-1.9 38.4-15.7 43.8-30.8 5.4-15 5.4-27.8 3.8-30.8-1.6-3.1-5.9-4.9-12.3-8.1z"/>
+        </svg>
+        <span>(51) 99242-9703</span>
       </a>
 
-      <!-- WhatsApp -->
-      <div class="mt-6 flex items-center justify-center space-x-2">
-        <a href="https://wa.me/5551992429703" target="_blank" class="flex items-center space-x-2 bg-green-500 hover:bg-green-600 px-4 py-2 rounded-lg text-white font-semibold">
-          <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" class="w-6 h-6">
-          <span>(51) 99242-9703</span>
+      <!-- Localização: Ícone + palavra “Localização” (link para o Maps) -->
+      <p class="mt-6 flex items-center justify-center gap-2">
+        <!-- Ícone de localização simples (emoji) -->
+        <span class="text-red-600 text-lg">📍</span>
+        <a href="https://maps.app.goo.gl/vJbfCCMrQzay9Bpa7" target="_blank" class="underline font-semibold">
+          Localização
         </a>
-      </div>
+      </p>
     </div>
   </section>
 
-  <!-- Serviços -->
-  <section id="servicos" class="py-16 bg-white">
-    <div class="max-w-6xl mx-auto px-6 text-center">
-      <h2 class="text-3xl font-bold mb-8">Nossos Serviços</h2>
-      <p class="text-lg mb-6 text-gray-700">Oferecemos soluções completas em projetos, inspeções, laudos técnicos, perícias e fiscalização de obras.</p>
-    </div>
-  </section>
-
-  <!-- Contato -->
-  <section id="contato" class="py-16 bg-gray-100">
-    <div class="max-w-4xl mx-auto px-6 text-center">
-      <h2 class="text-3xl font-bold mb-8">Entre em Contato</h2>
-      
-      <!-- WhatsApp embaixo -->
-      <div class="flex justify-center mb-6">
-        <a href="https://wa.me/5551992429703" target="_blank" class="flex items-center space-x-2 bg-green-500 hover:bg-green-600 px-6 py-3 rounded-lg text-white font-semibold">
-          <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" class="w-6 h-6">
-          <span>(51) 99242-9703</span>
-        </a>
-      </div>
-
-      <!-- Localização -->
-      <div class="flex justify-center mt-4">
-        <a href="https://maps.app.goo.gl/vJbfCCMrQzay9Bpa7" target="_blank" class="flex items-center space-x-2 text-blue-600 hover:underline font-semibold">
-          <img src="https://cdn-icons-png.flaticon.com/512/535/535239.png" alt="Localização" class="w-6 h-6">
-          <span>Localização</span>
-        </a>
-      </div>
-    </div>
-  </section>
-
-  <!-- Rodapé -->
-  <footer class="bg-gray-900 text-white py-6 text-center">
-    <p>&copy; 2025 DMK Eletrotécnica - Todos os direitos reservados</p>
+  <!-- RODAPÉ -->
+  <footer class="bg-gray-900 text-white text-center py-6">
+    <p>&copy; 2025 DMK Eletrotécnica. Todos os direitos reservados.</p>
   </footer>
 
 </body>
 </html>
+
+
 
 
 
