--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>DMK Eletrotécnica</title>
-  <meta name="description" content="DMK Eletrotécnica — Fiscalização de obras, perícias, inspeções, projetos e laudos técnicos (SPDA e NR10)."/>
+  <meta name="description" content="DMK Eletrotécnica — Laudo para SPDA, inspeções, projetos e laudos técnicos (SPDA e NR10)."/>
   <link rel="preconnect" href="https://cdn.tailwindcss.com">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -70,7 +70,7 @@
 
         <!-- Perícias -->
         <article class="bg-white rounded-xl shadow overflow-hidden">
-          <img src="pericias.jpg" alt="Perícias judiciais e extrajudiciais" class="w-full h-48 object-cover"/>
+          <img src="pericia.jpg" alt="Perícias judiciais e extrajudiciais" class="w-full h-48 object-cover"/>
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2">📑 Perícias Judiciais e Extrajudiciais</h3>
             <p class="text-gray-600">
@@ -92,7 +92,7 @@
 
         <!-- Projetos -->
         <article class="bg-white rounded-xl shadow overflow-hidden">
-          <img src="projetos.jpg" alt="Projetos elétricos" class="w-full h-48 object-cover"/>
+          <img src="projeto.jpg" alt="Projetos elétricos" class="w-full h-48 object-cover"/>
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2">📐 Projetos Elétricos</h3>
             <p class="text-gray-600">
@@ -103,7 +103,7 @@
 
         <!-- Laudos SPDA -->
         <article class="bg-white rounded-xl shadow overflow-hidden">
-          <img src="spda.jpg" alt="Laudos de SPDA" class="w-full h-48 object-cover"/>
+          <img src="laudo.jpg" alt="Laudos de SPDA" class="w-full h-48 object-cover"/>
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2">🌩️ Laudos de SPDA</h3>
             <p class="text-gray-600">
@@ -115,7 +115,7 @@
 
         <!-- Laudos NR10 -->
         <article class="bg-white rounded-xl shadow overflow-hidden">
-          <img src="nr10.jpg" alt="Laudos NR10" class="w-full h-48 object-cover"/>
+          <img src="nr.jpg" alt="Laudos NR10" class="w-full h-48 object-cover"/>
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2">🛡️ Laudos NR10</h3>
             <p class="text-gray-600">
@@ -162,6 +162,7 @@
 
 </body>
 </html>
+
 
 
 
