--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>DMK Eletrotécnica</title>
   <meta name="description" content="DMK Eletrotécnica — Laudo para SPDA, inspeções, projetos e laudos técnicos (SPDA e NR10)."/>
-  <link rel="preconnect" href="https://cdn.tailwindcss.com">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -13,12 +12,12 @@
 
   <!-- HERO / BANNER -->
   <section class="relative h-[70vh] min-h-[480px] flex items-center justify-center overflow-hidden">
-    <!-- Imagem do banner na RAIZ (ex.: banner.jpg) -->
+    <!-- Imagem do banner -->
     <img src="banner.jpg" alt="Banner DMK Eletrotécnica" class="absolute inset-0 h-full w-full object-cover">
-    <!-- Camada para contraste do texto -->
+    <!-- Camada escura para contraste -->
     <div class="absolute inset-0 bg-black/50"></div>
 
-    <!-- Texto por cima do banner -->
+    <!-- Conteúdo do banner -->
     <div class="relative z-10 text-center px-6">
       <h1 class="text-4xl sm:text-5xl font-extrabold text-white drop-shadow mb-3">
         DMK Eletrotécnica
@@ -27,30 +26,31 @@
         Fiscalização de obras, perícias, inspeções, projetos e laudos técnicos
       </p>
 
-      <!-- “Solicitar Orçamento” + WhatsApp -->
-<p class="text-xl font-semibold text-white">Solicitar Orçamento</p>
+      <p class="text-xl font-semibold text-white mb-3">Solicitar Orçamento</p>
 
-<!-- Telefone direto no formato E.164 -->
-<a href="tel:+5551992429703" class="mt-2 inline-flex items-center gap-2 bg-blue-500 hover:bg-blue-600 text-white font-bold px-5 py-3 rounded-lg transition">
-  <!-- Ícone Telefone -->
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-5 h-5 fill-current">
-    <path d="M511.6 380.2c3.4 8.8.9 18.9-6.3 25.2l-81.1 72.5c-7.4 6.6-18.4 8.3-27.6 4.3-29.3-12.4-61.2-28.6-96.1-58.1-34.8-29.6-62.3-61.3-81.1-87.5-5.7-8.1-4.6-19.2 2.5-26.2l57.7-57.7c7.1-7.1 8.8-18.2 2.5-26.2-15.4-19.7-32.4-43.9-47.5-70.7-15.1-26.9-28.2-55.2-38-83.7-3-9.2-.9-19.3 6.3-25.9L181.7 6.4c7.3-6.6 17.8-8.2 26.7-4.2 24.8 10.8 55.5 26.4 88.1 54.3 32.6 27.8 61.7 61.5 87.6 96.5 25.8 35 43.9 68.7 54.8 93.6 4.1 8.9 2.4 19.4-4.4 26.7l-64.9 64.9c-6.6 6.6-16.7 8.7-25.9 5.7-12.3-3.9-25-8.2-38-13.1 11.9 20.5 26.1 40.5 42.7 59.1 16.5 18.6 34.7 35.7 54.4 51.2 6.8 5.2 16.3 6.1 24 2.4l64.3-30.7c8.3-4 18.1-2.7 24.6 3.3l51.6 48.7z"/>
-  </svg>
-  <span>+55 51 99242-9703</span>
-</a>
+      <!-- Botão Telefone -->
+      <a href="tel:+5551992429703"
+         class="inline-flex items-center gap-2 bg-blue-500 hover:bg-blue-600 text-white font-bold px-5 py-3 rounded-lg transition mb-2">
+        <!-- Ícone telefone -->
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-5 h-5 fill-current">
+          <path d="M511.6 380.2c3.4 8.8.9 18.9-6.3 25.2l-81.1 72.5c-7.4 6.6-18.4 8.3-27.6 4.3-29.3-12.4-61.2-28.6-96.1-58.1-34.8-29.6-62.3-61.3-81.1-87.5-5.7-8.1-4.6-19.2 2.5-26.2l57.7-57.7c7.1-7.1 8.8-18.2 2.5-26.2-15.4-19.7-32.4-43.9-47.5-70.7-15.1-26.9-28.2-55.2-38-83.7-3-9.2-.9-19.3 6.3-25.9L181.7 6.4c7.3-6.6 17.8-8.2 26.7-4.2 24.8 10.8 55.5 26.4 88.1 54.3 32.6 27.8 61.7 61.5 87.6 96.5 25.8 35 43.9 68.7 54.8 93.6 4.1 8.9 2.4 19.4-4.4 26.7l-64.9 64.9c-6.6 6.6-16.7 8.7-25.9 5.7-12.3-3.9-25-8.2-38-13.1 11.9 20.5 26.1 40.5 42.7 59.1 16.5 18.6 34.7 35.7 54.4 51.2 6.8 5.2 16.3 6.1 24 2.4l64.3-30.7c8.3-4 18.1-2.7 24.6 3.3l51.6 48.7z"/>
+        </svg>
+        <span>+55 51 99242-9703</span>
+      </a>
 
-<!-- WhatsApp -->
-<a href="https://wa.me/5551992429703" target="_blank"
-   class="mt-2 inline-flex items-center gap-2 bg-green-500 hover:bg-green-600 text-white font-bold px-5 py-3 rounded-lg transition">
-  <!-- Ícone WhatsApp -->
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-5 h-5 fill-current">
-    <path d="M380.9 97.1C339 55.1 283.2 32 224.8 32 117.8 32 32 117.7 32 224.6c0 40.7 10.7 80.4 31 115.3L32 480l143.8-30.2c33.7 18.5 71.8 28.3 110.9 28.3h.1c106.9 0 192.7-85.7 192.7-192.6 0-58.4-23.2-113.9-64.1-155.9zM224.8 438.7c-34.3 0-67.9-9.2-97.2-26.6l-6.9-4.1-85.3 17.9 17.9-83.3-4.4-7.2c-19.7-32.1-30.1-69-30.1-107.8 0-112.3 91.4-203.6 203.9-203.6 54.4 0 105.6 21.2 144.1 59.7 38.5 38.5 59.7 89.7 59.7 144.1-.1 112.4-91.5 203.9-203.7 203.9zm118.4-150.6c-6.5-3.2-38.4-18.9-44.4-21.1-5.9-2.2-10.2-3.2-14.5 3.2s-16.7 21.1-20.5 25.4c-3.8 4.3-7.5 4.8-13.9 1.6-6.5-3.2-27.3-10.1-52-32.3-19.2-17.1-32.2-38.3-36-44.8-3.8-6.5-.4-10 2.9-13.2 3-3 6.5-7.8 9.7-11.7 3.2-3.8 4.3-6.5 6.5-10.8 2.2-4.3 1.1-8.1-.5-11.3-1.6-3.2-14.5-34.9-19.9-47.7-5.2-12.5-10.5-10.8-14.5-11h-12.3c-4.3 0-11.3 1.6-17.2 8.1-5.9 6.5-22.6 22.1-22.6 53.9s23.2 62.5 26.4 66.8c3.2 4.3 45.9 70.1 111.3 98.4 15.6 6.7 27.7 10.7 37.2 13.7 15.6 4.9 29.8 4.2 41 2.6 12.5-1.9 38.4-15.7 43.8-30.8 5.4-15 5.4-27.8 3.8-30.8-1.6-3.1-5.9-4.9-12.3-8.1z"/>
-  </svg>
-  <span>WhatsApp</span>
-</a>
+      <!-- Botão WhatsApp -->
+      <a href="https://wa.me/5551992429703" target="_blank"
+         class="inline-flex items-center gap-2 bg-green-500 hover:bg-green-600 text-white font-bold px-5 py-3 rounded-lg transition">
+        <!-- Ícone WhatsApp -->
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-5 h-5 fill-current">
+          <path d="M380.9 97.1C339 55.1 283.2 32 224.8 32 117.8 32 32 117.7 32 224.6c0 40.7 10.7 80.4 31 115.3L32 480l143.8-30.2c33.7 18.5 71.8 28.3 110.9 28.3h.1c106.9 0 192.7-85.7 192.7-192.6 0-58.4-23.2-113.9-64.1-155.9zM224.8 438.7c-34.3 0-67.9-9.2-97.2-26.6l-6.9-4.1-85.3 17.9 17.9-83.3-4.4-7.2c-19.7-32.1-30.1-69-30.1-107.8 0-112.3 91.4-203.6 203.9-203.6 54.4 0 105.6 21.2 144.1 59.7 38.5 38.5 59.7 89.7 59.7 144.1-.1 112.4-91.5 203.9-203.7 203.9zm118.4-150.6c-6.5-3.2-38.4-18.9-44.4-21.1-5.9-2.2-10.2-3.2-14.5 3.2s-16.7 21.1-20.5 25.4c-3.8 4.3-7.5 4.8-13.9 1.6-6.5-3.2-27.3-10.1-52-32.3-19.2-17.1-32.2-38.3-36-44.8-3.8-6.5-.4-10 2.9-13.2 3-3 6.5-7.8 9.7-11.7 3.2-3.8 4.3-6.5 6.5-10.8 2.2-4.3 1.1-8.1-.5-11.3-1.6-3.2-14.5-34.9-19.9-47.7-5.2-12.5-10.5-10.8-14.5-11h-12.3c-4.3 0-11.3 1.6-17.2 8.1-5.9 6.5-22.6 22.1-22.6 53.9s23.2 62.5 26.4 66.8c3.2 4.3 45.9 70.1 111.3 98.4 15.6 6.7 27.7 10.7 37.2 13.7 15.6 4.9 29.8 4.2 41 2.6 12.5-1.9 38.4-15.7 43.8-30.8 5.4-15 5.4-27.8 3.8-30.8-1.6-3.1-5.9-4.9-12.3-8.1z"/>
+        </svg>
+        <span>WhatsApp</span>
+      </a>
+    </div>
+  </section>
 
-
-  <!-- SOBRE (curto) -->
+  <!-- SOBRE -->
   <section class="py-12 px-6 max-w-5xl mx-auto text-center">
     <h2 class="text-3xl font-bold mb-4">Sobre a DMK</h2>
     <p class="text-lg text-gray-700">
@@ -144,34 +144,10 @@
       <h2 class="text-3xl font-bold mb-6">Entre em contato</h2>
       <p class="text-gray-700 mb-6">Fale com a DMK e solicite seu orçamento agora mesmo.</p>
 
-      <!-- WhatsApp (repetido embaixo) -->
+      <!-- WhatsApp -->
       <a href="https://wa.me/5551992429703" target="_blank"
-         class="inline-flex items-center gap-2 bg-green-500 hover:bg-green-600 text-white font-bold px-6 py-3 rounded-lg transition">
-        <!-- Ícone WhatsApp (SVG) -->
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" aria-hidden="true" class="w-5 h-5 fill-current">
-          <path d="M380.9 97.1C339 55.1 283.2 32 224.8 32 117.8 32 32 117.7 32 224.6c0 40.7 10.7 80.4 31 115.3L32 480l143.8-30.2c33.7 18.5 71.8 28.3 110.9 28.3h.1c106.9 0 192.7-85.7 192.7-192.6 0-58.4-23.2-113.9-64.1-155.9zM224.8 438.7c-34.3 0-67.9-9.2-97.2-26.6l-6.9-4.1-85.3 17.9 17.9-83.3-4.4-7.2c-19.7-32.1-30.1-69-30.1-107.8 0-112.3 91.4-203.6 203.9-203.6 54.4 0 105.6 21.2 144.1 59.7 38.5 38.5 59.7 89.7 59.7 144.1-.1 112.4-91.5 203.9-203.7 203.9zm118.4-150.6c-6.5-3.2-38.4-18.9-44.4-21.1-5.9-2.2-10.2-3.2-14.5 3.2s-16.7 21.1-20.5 25.4c-3.8 4.3-7.5 4.8-13.9 1.6-6.5-3.2-27.3-10.1-52-32.3-19.2-17.1-32.2-38.3-36-44.8-3.8-6.5-.4-10 2.9-13.2 3-3 6.5-7.8 9.7-11.7 3.2-3.8 4.3-6.5 6.5-10.8 2.2-4.3 1.1-8.1-.5-11.3-1.6-3.2-14.5-34.9-19.9-47.7-5.2-12.5-10.5-10.8-14.5-11h-12.3c-4.3 0-11.3 1.6-17.2 8.1-5.9 6.5-22.6 22.1-22.6 53.9s23.2 62.5 26.4 66.8c3.2 4.3 45.9 70.1 111.3 98.4 15.6 6.7 27.7 10.7 37.2 13.7 15.6 4.9 29.8 4.2 41 2.6 12.5-1.9 38.4-15.7 43.8-30.8 5.4-15 5.4-27.8 3.8-30.8-1.6-3.1-5.9-4.9-12.3-8.1z"/>
-        </svg>
-        <span>(51) 99242-9703</span>
-      </a>
 
-      <!-- Localização: Ícone + palavra “Localização” (link para o Maps) -->
-      <p class="mt-6 flex items-center justify-center gap-2">
-        <!-- Ícone de localização simples (emoji) -->
-        <span class="text-red-600 text-lg">📍</span>
-        <a href="https://maps.app.goo.gl/vJbfCCMrQzay9Bpa7" target="_blank" class="underline font-semibold">
-          Localização
-        </a>
-      </p>
-    </div>
-  </section>
 
-  <!-- RODAPÉ -->
-  <footer class="bg-gray-900 text-white text-center py-6">
-    <p>&copy; 2025 DMK Eletrotécnica. Todos os direitos reservados.</p>
-  </footer>
-
-</body>
-</html>
 
 
 
