--- a/index.html
+++ b/index.html
@@ -138,14 +138,33 @@
     </div>
   </section>
 
-  <!-- CONTATO -->
-  <section id="contato" class="py-16 px-6">
-    <div class="max-w-4xl mx-auto text-center">
-      <h2 class="text-3xl font-bold mb-6">Entre em contato</h2>
-      <p class="text-gray-700 mb-6">Fale com a DMK e solicite seu orçamento agora mesmo.</p>
+  <!-- Seção Final - Chamada para Ação -->
+<section class="bg-gray-900 text-center py-10">
+  <h2 class="text-2xl font-bold text-white mb-4">Precisa de ajuda agora?</h2>
+  <p class="text-gray-300 mb-6">Entre em contato direto pelo WhatsApp ou telefone.</p>
 
-      <!-- WhatsApp -->
-      <a href="https://wa.me/5551992429703" target="_blank"
+  <!-- Botão WhatsApp -->
+  <a href="https://wa.me/5551992429703" target="_blank"
+     class="inline-flex items-center gap-2 bg-green-500 hover:bg-green-600 text-white font-bold px-6 py-3 rounded-lg shadow-lg transition m-2">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" aria-hidden="true" class="w-5 h-5 fill-current">
+      <path d="M380.9 97.1C339 55.1 283.2 32 224.8 32 ..."/>
+    </svg>
+    Solicitar Orçamento no WhatsApp
+  </a>
+
+  <!-- Botão de Chamada Direta -->
+  <a href="tel:+5551992429703"
+     class="inline-flex items-center gap-2 bg-blue-600 hover:bg-blue-700 text-white font-bold px-6 py-3 rounded-lg shadow-lg transition m-2">
+    📞 Ligar Agora
+  </a>
+
+  <!-- Link Localização -->
+  <a href="https://www.google.com/maps?q=-30.034647,-51.217658" target="_blank"
+     class="block text-green-400 hover:text-green-300 mt-4 underline">
+    📍 Ver Localização no Google Maps
+  </a>
+</section>
+
 
 
 
