--- a/index.html
+++ b/index.html
@@ -159,11 +159,12 @@
   </a>
 
   <!-- Link Localização -->
-  <a href="https://www.google.com/maps?q=-30.034647,-51.217658" target="_blank"
+  <a href="https://maps.app.goo.gl/n8kqj9KpJWXhM5rg9" target="_blank"
      class="block text-green-400 hover:text-green-300 mt-4 underline">
     📍 Ver Localização no Google Maps
   </a>
 </section>
+
 
 
 
